vlib/v/checker/tests/unknown_array_element_type_b.out
vlib/v/checker/tests/unknown_array_element_type_b.vv:2:6: error: unknown type `abc`.
Did you mean `Aaa`?
    1 | struct Aaa {
    2 |     a []abc
      |         ~~~
    3 | }
    4 |
